--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="titulo-principal">Brithany Yulady Carbo Gonzalez</h1>
         <p class="frase-inspiradora">El límite solo existe en tu mente</p>
         <figure class="logo-figura">
-            <img src="/Imagenes/foto.jpg" alt="logo de Brithany" width="200" height="200" class="logo-img">
+            <img src="Imagenes/foto.jpg" alt="logo de Brithany" width="200" height="200" class="logo-img">
             <figcaption class="logo-caption">Logo personal</figcaption>
         </figure>
     </header>
@@ -92,7 +92,7 @@
         <section id="multimedia" class="seccion">
             <article class="articulo-audio">
                 <h3 class="subtitulo">Audio de Presentacion</h3>
-                <audio src="/Audios/Audio 1.mp3" controls class="audio-presentacion"></audio>
+                <audio src="Audios/Audio 1.mp3" controls class="audio-presentacion"></audio>
             </article>
         </section>
     </main>
